--- a/src/components/ImageCarousel.astro
+++ b/src/components/ImageCarousel.astro
@@ -29,7 +29,7 @@ const hasMultipleImages = images.length > 1;
     {images.map((image, index) => (
       <div class="image-carousel__slide">
         <img
-          src={`${import.meta.env.BASE_URL}images/${image}`}
+          src={`${import.meta.env.BASE_URL}/images/${image}`}
           alt={`${alt} - Image ${index + 1}`}
           class="image-carousel__image"
           loading="lazy"
