--- a/src/components/GameCard.astro
+++ b/src/components/GameCard.astro
@@ -16,6 +16,9 @@ const { game } = Astro.props;
     priceEUR={game.priceEUR}
     priceCZK={game.priceCZK}
     condition={game.condition}
+    bggUrl={game.bggUrl}
+    geekmarketUrl={game.geekmarketUrl}
+    facebookUrl={game.facebookUrl}
   />
   <div class="game-card__content">
     <h3 class="game-card__title">{game.name}</h3>
